Complete inventory OpenAPI responses
